--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -1158,7 +1158,16 @@ s3_AbortMultipartUploads:
             - description:
               snippet_tags:
                 - S3.dotnetv3.AbortMPUExample
-  services:
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.s3.AbortMultipartUpload
+    services:
     s3: {AbortMultipartUploads}
 s3_CompleteMultipartUpload:
   languages:
@@ -1182,6 +1191,16 @@ s3_CreateMultipartUpload:
             - description:
               snippet_tags:
                 - rust.example_code.s3.create_multipart_upload
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.s3.CreateMultipartUpload
+                - cpp.example_code.s3.CreateMultipartUpload2
   services:
     s3: {CreateMultipartUpload}
 s3_ListMultipartUploads:
@@ -2285,6 +2304,17 @@ s3_UploadPart:
               snippet_tags:
                 - rust.example_code.s3.upload_part
                 - rust.example_code.s3.upload_part.CompletedMultipartUpload
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.s3.UploadPart
+                - cpp.example_code.s3.UploadPart2
+                - cpp.example_code.s3.UploadPart3
   services:
     s3: {UploadPart}
 s3_PutBucketNotificationConfiguration:
