--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -1158,6 +1158,10 @@ s3_AbortMultipartUploads:
             - description:
               snippet_tags:
                 - S3.dotnetv3.AbortMPUExample
+  services:
+    s3: {AbortMultipartUploads}
+s3_AbortMultipartUpload:
+  languages:
     C++:
       versions:
         - sdk_version: 1
@@ -1167,8 +1171,8 @@ s3_AbortMultipartUploads:
             - description:
               snippet_tags:
                 - cpp.example_code.s3.AbortMultipartUpload
-    services:
-    s3: {AbortMultipartUploads}
+  services:
+    s3: {AbortMultipartUpload}
 s3_CompleteMultipartUpload:
   languages:
     Rust:
@@ -1179,6 +1183,15 @@ s3_CompleteMultipartUpload:
             - description:
               snippet_tags:
                 - rust.example_code.s3.complete_multipart_upload
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.s3.CompleteMultipartUpload
   services:
     s3: {CompleteMultipartUpload}
 s3_CreateMultipartUpload:
@@ -2352,6 +2365,19 @@ s3_PutBucketAccelerateConfiguration:
                 - S3.dotnetv3.TransferAccelerationExample
   services:
     s3: {PutBucketAccelerateConfiguration}
+s3_GetObjectAttributes:
+  languages:
+    C++:
+      versions:
+        - sdk_version: 1
+          github: cpp/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - cpp.example_code.s3.GetObjectAttributes
+  services:
+    s3: {GetObjectAttributes}
 s3_DownloadBucketToDirectory:
   title: Download all objects in an &S3long; (&S3;) bucket to a local directory
   title_abbrev: Download objects to a local directory
@@ -3216,6 +3242,23 @@ s3_Scenario_ObjectLock:
                 - javascriptv3/example_code/s3/scenarios/object-locking/clean.steps.js
   services:
     s3: {PutObjectLockConfiguration, PutObjectRetention, GetObjectRetention, PutObjectLegalHold, GetObjectLegalHold, GetObjectLockConfiguration}
+s3_Scenario_ObjectIntegrity:
+  title: Work with &S3; object integrity features using an &AWS; SDK
+  title_abbrev: Work with &S3; object integrity
+  synopsis: work with S3 object integrity features.
+  category: Scenarios
+  languages:
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/S3/scenarios/S3ObjectLockScenario
+          sdkguide:
+          excerpts:
+            - description: Run an interactive scenario demonstrating &S3; object integrity features.
+              snippet_tags:
+                - S3LockWorkflow.dotnetv3.ObjectLockWorkflow
+  services:
+    s3: {AbortMultipartUpload, CreateMultipartUpload, DeleteObject, GetObjectAttributes, PutObject, UploadPart, CompleteMultipartUpload}
 s3_SelectObjectContent:
   languages:
     Java:
