--- a/.doc_gen/validation.yaml
+++ b/.doc_gen/validation.yaml
@@ -204,6 +204,7 @@ allow_list:
   - "v2/service/cognitoidentityprovider/types"
   - "abortIncompleteMultipartUploadsOlderThan"
   - "com/pinterest/ktlint/releases/download/1"
+  - "aws/s3/model/AbortMultipartUploadRequest"
 sample_files:
   - "README.md"
   - "chat_sfn_state_machine.json"
