--- a/.doc_gen/metadata/iot_metadata.yaml
+++ b/.doc_gen/metadata/iot_metadata.yaml
@@ -449,9 +449,12 @@ iot_Scenario:
           github: javav2/example_code/iot
           sdkguide:
           excerpts:
-            - description:
+            - description: Run an interactive scenario demonstrating &IoT; features.
               snippet_tags:
                 - iot.java2.scenario.main
+            - description: A wrapper class for &IoT; SDK methods.
+              snippet_tags:
+                - iot.java2.scenario.actions.main   
     C++:
       versions:
         - sdk_version: 1
