--- a/.github/workflows/stats-lambda.yml
+++ b/.github/workflows/stats-lambda.yml
@@ -1,4 +1,4 @@
-# This workflow executes a Lamdba function that records metrics for each successfully merged PR.
+# This workflow executes a Lamdba function that records metrics for each merged PR.
 #
 # For more information, see:
 # https://github.com/marketplace/actions/invoke-aws-lambda
@@ -6,6 +6,7 @@
 name: Trigger Lambda to capture metrics
 
 permissions:
+  packages: write
   contents: read
   id-token: write
 
@@ -13,6 +14,8 @@ on:   # yamllint disable-line rule:truthy
   pull_request:
     types:
       - closed
+    branches:
+      - 'main'
   workflow_dispatch:
 env:
   COMMIT: ${{github.event.pull_request.head.sha}}
@@ -24,6 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     name: GitHub Statistics
     steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
       - name: Configure AWS Credentials
         id: creds
         uses: aws-actions/configure-aws-credentials@v4
