--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -969,6 +969,14 @@ s3_GetObjectLegalHold:
               snippet_tags:
                 - gov2.workflows.s3.ObjectLock.S3Actions.struct
                 - gov2.workflows.s3.ObjectLock.GetObjectLegalHold
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/s3/scenarios/object-locking
+          excerpts:
+            - description: Put an object legal hold.
+              snippet_tags:
+                - python.example_code.s3.GetObjectLegalHold
   services:
     s3: {GetObjectLegalHold}
 s3_GetObjectLegalHoldConfiguration:
@@ -1045,6 +1053,14 @@ s3_GetObjectLockConfiguration:
             - description:
               snippet_files:
                 - javascriptv3/example_code/s3/actions/get-object-lock-configuration.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/s3/scenarios/object-locking
+          excerpts:
+            - description: Get the object lock configuration.
+              snippet_tags:
+                - python.example_code.s3.GetObjectLockConfiguration
   services:
     s3: {GetObjectLockConfiguration}
 s3_GetObjectRetention:
@@ -2184,6 +2200,14 @@ s3_PutObjectLegalHold:
             - description:
               snippet_files:
                 - javascriptv3/example_code/s3/actions/put-object-legal-hold.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/s3/scenarios/object-locking
+          excerpts:
+            - description: Put an object legal hold.
+              snippet_tags:
+                - python.example_code.s3.PutObjectLegalHold
   services:
     s3: {PutObjectLegalHold}
 s3_PutObjectLockConfiguration:
@@ -2239,6 +2263,14 @@ s3_PutObjectLockConfiguration:
             - description: Set the default retention period of a bucket.
               snippet_files:
                 - javascriptv3/example_code/s3/actions/put-default-object-lock-configuration.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/s3/scenarios/object-locking
+          excerpts:
+            - description: Put object lock configuration.
+              snippet_tags:
+                - python.example_code.s3.PutObjectLockConfiguration
   services:
     s3: {PutObjectLockConfiguration}
 s3_PutObjectRetention:
@@ -2280,6 +2312,14 @@ s3_PutObjectRetention:
             - description:
               snippet_files:
                 - javascriptv3/example_code/s3/actions/put-object-retention.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/s3/scenarios/object-locking
+          excerpts:
+            - description: Put an object retention.
+              snippet_tags:
+                - python.example_code.s3.PutObjectRetention
   services:
     s3: {PutObjectRetention}
 s3_UploadPart:
