--- a/.github/workflows/stats-lambda.yml
+++ b/.github/workflows/stats-lambda.yml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
 
 on:   # yamllint disable-line rule:truthy
-  pull_request:
+  pull_request_target:
     types:
       - closed
     branches:
@@ -23,7 +23,7 @@ env:
   AWS_REGION: "eu-west-1"
 jobs:
   if_merged:
-    if: github.event.pull_request.merged == true
+    if: (github.event.pull_request.merged == true) && (contains(github.event.pull_request.labels.*.name, 'On Call Review complete'))
     runs-on: ubuntu-latest
     name: GitHub Statistics
     steps:
@@ -34,7 +34,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-region: ${{env.AWS_REGION}}
-          role-to-assume: arn:aws:iam::959731285276:role/run-the-numbers-lambda
+          role-to-assume: ${{ secrets.ROLE_ID }}
           output-credentials: true
       - name: Create payload
         run: echo "JSON_PAYLOAD={\"commit\" :\"${{ env.COMMIT }}\",\"author\" :\"${{ env.PR_AUTHOR }}\"}" >> $GITHUB_ENV
