--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -16,7 +16,7 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@2024-06-10-A
+        uses: awsdocs/aws-doc-sdk-examples-tools@01fd1d4eb091ba4fc787daa6a975ed3f42b9de37
         with:
           doc_gen_only: "False"
           strict_titles: "True"
