--- a/.github/workflows/issue-metrics.yml
+++ b/.github/workflows/issue-metrics.yml
@@ -37,7 +37,7 @@ jobs:
         uses: github/issue-metrics@v2
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SEARCH_QUERY: 'repo:awsdocs/aws-doc-sdk-examples is:issue created:${{ env.first_day }}..${{ env.last_day }}'
+          SEARCH_QUERY: 'repo:awsdocs/aws-doc-sdk-examples created:${{ env.first_day }}..${{ env.last_day }}'
 
       - name: Create issue
         uses: peter-evans/create-issue-from-file@v5
