--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -3313,7 +3313,7 @@ s3_Scenario_AbortMultipartUpload:
     s3: {ListMultipartUploads, AbortMultipartUpload, PutBucketLifecycleConfiguration}
 s3_Scenario_ProcessS3EventNotification:
   title: Receive and process &S3; event notifications by using an &AWS; SDK.
-  title_abbrev: Process S3 event notifications.
+  title_abbrev: Process S3 event notifications
   synopsis: work with S3 event notifications in an object-oriented way.
   category: Scenarios
   languages:
