Use unclaimed but specific syntax `cli` for CLI examples

--- a/.doc_gen/metadata/sdks.yaml
+++ b/.doc_gen/metadata/sdks.yaml
@@ -299,7 +299,7 @@ Swift:
   guide: "&guide-swift-dev;"
 CLI:
   property: cli
-  syntax: none
+  syntax: cli 
   sdk:
     2:
       long: "&CLIlong;"
