First pass on changes

--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -155,7 +155,7 @@ ec2_CreateKeyPair:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.create_key_pair.code
+                - cpp.example_code.ec2,CreateKeyPair
     Bash:
       versions:
         - sdk_version: 2
@@ -233,7 +233,7 @@ ec2_DescribeKeyPairs:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.describe_key_pairs.code
+                - cpp.example_code.ec2.DescribeKeyPairs
     Bash:
       versions:
         - sdk_version: 2
@@ -322,8 +322,8 @@ ec2_CreateSecurityGroup:
           excerpts:
             - description:
               snippet_tags:
-                - cpp.example_code.ec2.create_security_group.client
                 - cpp.example_code.ec2.CreateSecurityGroup
+                - cpp.example_code.ec2.CreateSecurityGroup2
     Bash:
       versions:
         - sdk_version: 2
@@ -496,7 +496,7 @@ ec2_StartInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.start_instance.code
+                - cpp.example_code.ec2.StartInstances
     Bash:
       versions:
         - sdk_version: 2
@@ -591,7 +591,7 @@ ec2_StopInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.stop_instance.code
+                - cpp.example_code.ec2.StopInstances
     Bash:
       versions:
         - sdk_version: 2
@@ -678,8 +678,8 @@ ec2_AllocateAddress:
           excerpts:
             - description:
               snippet_tags:
-                - cpp.example_code.ec2.allocate_address.client
                 - cpp.example_code.ec2.AllocateAddress
+                - cpp.example_code.ec2.AllocateAddress2
     Bash:
       versions:
         - sdk_version: 2
@@ -916,7 +916,7 @@ ec2_ReleaseAddress:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.release_address.code
+                - cpp.example_code.ec2.ReleaseAddress
     Bash:
       versions:
         - sdk_version: 2
@@ -977,7 +977,7 @@ ec2_AuthorizeSecurityGroupIngress:
           excerpts:
             - description:
               snippet_tags:
-                - cpp.example_code.ec2.allocate_address.client
+                - cpp.example_code.ec2.create_security_group.client
                 - ec2.cpp.configure_security_group02.code
                 - ec2.cpp.configure_security_group03.code
     JavaScript:
@@ -1066,7 +1066,7 @@ ec2_DeleteKeyPair:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.delete_key_pair.code
+                - cpp.example_code.ec2.DeleteKeyPair
     Bash:
       versions:
         - sdk_version: 2
@@ -1144,7 +1144,7 @@ ec2_DescribeSecurityGroups:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.describe_security_groups.code
+                - cpp.example_code.ec2.DescribeSecurityGroups
     Bash:
       versions:
         - sdk_version: 2
@@ -1222,7 +1222,7 @@ ec2_DeleteSecurityGroup:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.delete_security_group.code
+                - cpp.example_code.ec2.DeleteSecurityGroup
     Bash:
       versions:
         - sdk_version: 2
@@ -1420,7 +1420,7 @@ ec2_DescribeInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.describe_instances.code
+                - cpp.example_code.ec2.DescribeInstances
     Bash:
       versions:
         - sdk_version: 2
@@ -1477,8 +1477,8 @@ ec2_DescribeRegions:
           excerpts:
             - description:
               snippet_tags:
-                - cpp.example_code.ec2.describe_regions.client
-                - cpp.example_code.ec2.DescribeRegions
+                 - cpp.example_code.ec2.DescribeRegions
+                 - cpp.example_code.ec2.DescribeRegions2
   services:
     ec2: {DescribeRegions}
 ec2_DescribeInstanceStatus:
@@ -1519,7 +1519,7 @@ ec2_MonitorInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.enable_monitor_instance.code
+                - cpp.example_code.ec2.MonitorInstances
   services:
     ec2: {MonitorInstances}
 ec2_UnmonitorInstances:
@@ -1531,7 +1531,7 @@ ec2_UnmonitorInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.disable_monitor_instance.code
+                - cpp.example_code.ec2.UnmonitorInstances
     JavaScript:
       versions:
         - sdk_version: 3
@@ -1589,7 +1589,7 @@ ec2_RebootInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.reboot_instance.code
+                - cpp.example_code.ec2.RebootInstances
     Python:
       versions:
         - sdk_version: 3
@@ -1732,7 +1732,7 @@ ec2_DescribeAddresses:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.cpp.describe_addresses.code
+                - cpp.example_code.ec2.DescribeAddresses
   services:
     ec2: {DescribeAddresses}
 ec2_DescribeAvailabilityZones:
