--- a/cpp/example_code/s3/s3_object_integrity_workflow/CMakeLists.txt
+++ b/cpp/example_code/s3/s3_object_integrity_workflow/CMakeLists.txt
@@ -31,7 +31,7 @@ if (WINDOWS_BUILD)
     # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
 
     # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
-    # and set the proper subdirectory to the executables' location.
+    # and set the proper subdirectory to the executable's location.
 
     AWSSDK_CPY_DYN_LIBS(SERVICE_COMPONENTS "" ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR})
 endif ()
